# ai-parking-agent

./: .env  .gitignore  main.py  pyproject.toml
agent/: agent.ipynb  agent.py
agents/: AGENT.ipynb
agents2/: agent test.ipynb
auth/: auth_bearer.py  auth_handler.py
database/: __init__.py  db.py
models/: Models.py  parkingLot.py  plan.py  plan_parking_lot.py  reclamation.py  reservation.py  subscription.py  tarifGrid.py  user.py
routes/: api.py
schemas/: agent_schema.py  parking_lot_schema.py  plan_parking_lot_schema.py  plan_schema.py  reclamation_schema.py  reservation_schema.py  schemas.py  subscription_schema.py  tarif_grid_schemas.py  user_schemas.py
services/: parking_lot_service.py  plan_parking_lot_service.py  plan_service.py  reclamation_service.py  reservation_service.py  subscription_service.py  tarif_grid_service.py  user.py  user_service.py
